# collectmd

./: .gitignore  LICENSE  README.md  clean_build.bat  collect.py  pyproject.toml
src/collectmd/: __init__.py  cli.py  core.py
